<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_display_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="group22.travelstories.DisplayStoryActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/display_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <EditText
            android:id="@+id/edittext_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:imeOptions="actionDone"
            android:hint="Add Journey Title"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:id ="@+id/fab"-->
        <!--tools:context="group22.travelstories.DisplayStoryActivity"-->
        <!--android:layout_marginLeft="320dp"-->
        <!--android:layout_marginTop="450dp"-->
        <!--android:layout_marginBottom="16dp" />-->

        <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom|right"-->
            <!--android:id ="@+id/add"-->
            <!--tools:context="group22.travelstories.DisplayStoryActivity"-->
            <!--android:src="@drawable/ic_cast_grey"-->
            <!--android:layout_marginLeft="250dp"-->
            <!--android:layout_marginTop="450dp"-->
            <!--android:layout_marginBottom="16dp" />-->

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv"
            tools:context="group22.travelstories.DisplayStoryActivity"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
