<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="group22.travelstories.EditStoryActivity">

    <item
        android:id="@+id/delete_entry"
        android:icon="@drawable/ic_delete_b_24dp"
        android:title="Add"
        app:showAsAction="ifRoom"/>

</menu>