<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="group22.travelstories.DisplayStoryActivity">

    <item
        android:id="@+id/deleteTimeline"
        android:icon="@drawable/ic_delete_b_24dp"
        android:title="Delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_entry"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="Add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sharing"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:title="Share"
        app:showAsAction="ifRoom"/>
</menu>