<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/form_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/newlocationname"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:inputType="text"-->
            <!--android:hint="Enter a Location"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:imeOptions="actionDone"-->
            <!--android:padding="5dp" />-->

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <group22.travelstories.DelayAutoCompleteTextView
                android:id="@+id/geo_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:hint="Search for a location..."
                android:textColorHint="@android:color/darker_gray"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:padding="10dp"
                android:dropDownWidth="fill_parent"
                />

            <ImageView
                android:id="@+id/geo_autocomplete_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_b_24dp"
                android:contentDescription="Clear"
                android:layout_gravity="center_vertical|end"
                android:visibility="gone"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editFromTime"
                android:text="Enter a Starting Time"
                android:textSize="15dp"
                android:textColor="@android:color/darker_gray"
                android:layout_weight="0.5"
                android:padding="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editFromDate"
                android:textSize="15dp"
                android:text="Enter a Starting Date"
                android:textColor="@android:color/darker_gray"
                android:layout_weight="0.5"
                android:padding="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editEndTime"
                android:textSize="15dp"
                android:text="Enter a End Time"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editEndDate"
                android:textSize="15dp"
                android:text="Enter a End Date"
                android:padding="5dp"
                android:textColor="@android:color/darker_gray"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/upload"
                android:text="Upload"
                android:layout_weight="0.33"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteEntry"
                android:textOff="Delete"
                android:textOn="Deleting"
                android:layout_weight="0.33"/>

            <Button
                android:text="Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addEntry"
                android:layout_weight="0.33"/>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadGallery"/>


    </LinearLayout>

</LinearLayout>