<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="group22.travelstories.PreviousStoriesActivity">

    <item
        android:id="@+id/add_story"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="addStory"
        app:showAsAction="ifRoom"/>

</menu>